--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "virtual-keyboard",
   "version": "1.0.0",
   "description": "rss-school task virtual-keyboard",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext js",
+    "lint-fix": "eslint . --ext js --fix"
+
   },
   "repository": {
     "type": "git",
